# fourier

./: Cargo.toml  README.md  build.rs  fourier.css  fourier.html  template.css  template.html
src/: lib.rs  main.rs  shader.wgsl  window.rs
