[package]
name = "fourier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
pollster = { version = "0.3.0", features = ["macro"] }
wgpu = "0.15.0"
winit = "0.28.1"
